@@ -1,5 +1,10 @@
 2009-12-28  Andoni Morales Alastruey  <amorales@flumotion.com>
 
+	* flumotion/component/consumers/applestreamer/resources.py:
+	Update cookie validity method's description
+
+2009-12-28  Andoni Morales Alastruey  <amorales@flumotion.com>
+
 	* flumotion/component/consumers/httpfragstreamer (deleted):
 	* flumotion/component/consumers/httpfragstreamer/common.py (deleted):
 	* flumotion/component/consumers/httpfragstreamer/mpegtssegmenter.py
